dovrsena fnkcionalnost dodavanje predmeta na studijski program
