# Service/src/main/java/controllers/PredmetNaStdProgramuController.java
@@ -11,8 +11,13 @@ import dto.PredmetNaStudijskomProgramuDTO;
 import java.util.ArrayList;
 import java.util.List;
 import javax.inject.Inject;
+import javax.validation.ConstraintViolationException;
 import javax.validation.constraints.NotNull;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
 import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
@@ -30,7 +35,7 @@ public class PredmetNaStdProgramuController {
 
     @Inject
     PredmetNaStudijskomProgramuLogic pnspl;
-    
+
     @GET
     @Path("/{stdProgramId}/{predmetId}")
     @Produces({MediaType.APPLICATION_JSON, MediaType.TEXT_PLAIN})
@@ -68,6 +73,58 @@ public class PredmetNaStdProgramuController {
 
             return Response.ok(pnspdtos).build();
 
+        } catch (Exception e) {
+            return Response.serverError().type(MediaType.TEXT_PLAIN).entity(e).build();
+        }
+    }
+
+    @POST
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON, MediaType.TEXT_PLAIN})
+    public Response create(@NotNull PredmetNaStudijskomProgramuDTO pnspdto) {
+        try {
+
+            PredmetNaStudijskomProgramu predmetNaStudijskomProgramu = Mapper.toPredmetNaStudjskomProgramu(pnspdto);
+            PredmetNaStudijskomProgramuDTO createdPnspDTO = Mapper.toPredmetNaStudijskomProgramuDTO(pnspl.create(predmetNaStudijskomProgramu));
+
+            return Response.ok(createdPnspDTO).build();
+
+        } catch (ConstraintViolationException cve) {
+            return Response.status(Response.Status.BAD_REQUEST).type(MediaType.TEXT_PLAIN).entity(cve).build();
+        } catch (Exception e) {
+            return Response.serverError().type(MediaType.TEXT_PLAIN).entity(e).build();
+        }
+    }
+
+    @PUT
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON, MediaType.TEXT_PLAIN})
+    public Response update(@NotNull PredmetNaStudijskomProgramuDTO pnspdto) {
+        try {
+
+            PredmetNaStudijskomProgramu predmetNaStudijskomProgramu = Mapper.toPredmetNaStudjskomProgramu(pnspdto);
+            PredmetNaStudijskomProgramuDTO updatedPnspDTO = Mapper.toPredmetNaStudijskomProgramuDTO(pnspl.update(predmetNaStudijskomProgramu));
+
+            return Response.ok(updatedPnspDTO).build();
+
+        } catch (ConstraintViolationException cve) {
+            return Response.status(Response.Status.BAD_REQUEST).type(MediaType.TEXT_PLAIN).entity(cve).build();
+        } catch (Exception e) {
+            return Response.serverError().type(MediaType.TEXT_PLAIN).entity(e).build();
+        }
+    }
+
+    @DELETE
+    @Path("/{stdProgramId}/{predmetId}")
+    @Produces({MediaType.APPLICATION_JSON, MediaType.TEXT_PLAIN})
+    public Response delete(@NotNull @PathParam("stdProgramId") int stdProgramId, @NotNull @PathParam("predmetId") int predmetId) {
+        try {
+
+            PredmetNaStudijskomProgramuDTO pnspDTO = Mapper.toPredmetNaStudijskomProgramuDTO(pnspl.delete(stdProgramId, predmetId));
+            return Response.ok(pnspDTO).build();
+
+        } catch (ConstraintViolationException cve) {
+            return Response.status(Response.Status.BAD_REQUEST).type(MediaType.TEXT_PLAIN).entity(cve).build();
         } catch (Exception e) {
             return Response.serverError().type(MediaType.TEXT_PLAIN).entity(e).build();
         }
